--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
     "normalize-url": "^5.3.0"
