--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "moment": "^2.29.1",
     "react": "^17.0.1",
@@ -20,6 +20,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "tailwindcss": "^2.0.2",
     "uuid": "^8.3.1",
     "web-vitals": "^0.2.4"
   },
