--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
   "author": "ncevallos",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.0",
+    "autoprefixer": "^10.2.0",
+    "axios": "^0.21.1",
     "concurrently": "^5.3.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
     "express-validator": "^6.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
-    "normalize-url": "^5.3.0"
+    "normalize-url": "^5.3.0",
+    "postcss": "^8.2.2"
   }
 }
