Sidebar changes, layout updates, bug fixes

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.10.15",
     "nodemon": "^2.0.6",
     "normalize-url": "^5.3.0",
-    "postcss": "^8.2.2"
+    "postcss": "^8.2.2",
+    "tailwindcss-filters": "^3.0.0"
   }
 }
