--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tailwindcss-filters": "^3.0.0",
     "typescript": "^4.1.3",
     "utf-8-validate": "^5.0.4",
     "uuid": "^8.3.1",
