--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-chatbot-kit": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
     "react-moment": "^1.0.0",
@@ -25,6 +26,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^5.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "tailwindcss-filters": "^3.0.0",
     "typescript": "^4.1.3",
