--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "autoprefixer": "^10.2.0",
     "axios": "^0.21.1",
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^5.3.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
