--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,13 @@
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "chartjs-plugin-trendline": "^0.1.1",
     "moment": "^2.29.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-chartjs-2": "^2.11.1",
     "react-chatbot-kit": "^1.1.1",
     "react-dom": "^17.0.1",
     "react-facebook-login": "^4.1.1",
