--- a/client/package.json
+++ b/client/package.json
@@ -13,10 +13,13 @@
     "bootstrap": "^4.5.3",
     "chart.js": "^2.9.4",
     "chartjs-plugin-trendline": "^0.1.1",
+    "date-fns": "^2.21.1",
     "moment": "^2.29.1",
+    "npm-install-missing": "^0.1.4",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.4.0",
     "react-chartjs-2": "^2.11.1",
     "react-chatbot-kit": "^1.1.1",
     "react-dom": "^17.0.1",
