--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "npm-install-missing": "^0.1.4",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.4.0",
     "react-chartjs-2": "^2.11.1",
@@ -30,6 +31,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-statusbar": "^0.0.4",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
