some minor additions and tweaks

--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-gauge-chart": "^0.3.0",
     "react-moment": "^1.0.0",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-statusbar": "^0.0.4",
