--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "ncevallos",
   "license": "ISC",
   "dependencies": {
+    "@craco/craco": "^6.2.0",
+    "apexcharts": "^3.27.3",
     "autoprefixer": "^10.2.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
@@ -28,6 +30,7 @@
     "nodemon": "^2.0.6",
     "normalize-url": "^5.3.0",
     "postcss": "^8.2.2",
+    "react-apexcharts": "^1.3.9",
     "react-player": "^2.9.0",
     "tailwindcss-filters": "^3.0.0"
   }
