--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "concurrently": "^5.3.0",
     "config": "^3.3.2",
     "express": "^4.17.1",
